--- a/Thesis/content/04_implementation.tex
+++ b/Thesis/content/04_implementation.tex
@@ -97,7 +97,7 @@ In order to create a DID, the source code of the prototype includes a \emph{/ver
 
 Software requirements to build the Veramo agent include: 
 \begin{itemize}
-  \item Node 10.8.2+
+  \item Node v14+
   \item Yarn
 \end{itemize}
 
