--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,21 +1,3 @@
-@article{FakePaper11,
-	title = {{Double Brackets WiLL preserve cApItAlIzAtIoN}},
-	author = {Guttenberg},
-	journal = {Guttenberg Press},
-	year = {2011},
-	doi = {123.456.789},
-	url = {http://www.examplelink.de}
-}
-
-@online{FakeWebPage11,
-	author = {Guttenberg},
-	urldate = {2011-11-11},
-	year = {2011},
-	month = {11},
-	Title = {Video of Chuck Norris walking on water},
-	url = {http://www.youtube.com/nonexistentlink}
-}
-
 ## Social Web Working Group
 
 @misc{celik_prodromou_le_hors_2014,
@@ -50,6 +32,8 @@
   month     = {Jul}
 }
 
+# Self Sovereign identity
+
 @inproceedings{Naik_Jenkins_2021,
   title        = {Sovrin Network for Decentralized Digital Identity: Analysing a Self-Sovereign Identity System Based on Distributed Ledger Technology},
   issn         = {2687-8828},
@@ -81,6 +65,16 @@
   language     = {en},
   year         = {2019}
 }
+
+# 7 Privacy principles
+ @misc{cavoukian_2006,
+  title   = {The 7 Foundational Principles Implementation and Mapping of Fair Information Practices},
+  url     = {https://sites.psu.edu/digitalshred/2020/11/13/privacy-by-design-pbd-the-7-foundational-principles-cavoukian/},
+  journal = {Privacy by Design},
+  author  = {Cavoukian, Ann},
+  year    = {2006},
+  month   = {Nov}
+} 
 
 # Layer 2 Blockchain
  @misc{weston_2022,
@@ -486,3 +480,60 @@
   pages     = {124-128},
   doi       = {10.1109/ICRTIT.2011.5972416}
 }
+
+% ----------------Evaluation-------------------
+# DNS Security Issues
+
+@article{carli2003security,
+  title   = {Security Issues with DNS},
+  author  = {Carli, Florent},
+  journal = {Retrieved October},
+  volume  = {3},
+  pages   = {2005},
+  year    = {2003}
+}
+
+# DNS security challenges
+
+@inproceedings{7058517,
+  author    = {Jalalzai, M. H. and Shahid, W. B. and Iqbal, M. M. W.},
+  booktitle = {2015 12th International Bhurban Conference on Applied Sciences and Technology (IBCAST)},
+  title     = {DNS security challenges and best practices to deploy secure DNS with digital signatures},
+  year      = {2015},
+  volume    = {},
+  number    = {},
+  pages     = {280-285},
+  doi       = {10.1109/IBCAST.2015.7058517}
+}
+
+#  BBC news DNS
+
+@misc{lee_2016,
+  title     = {Has the US just given away the internet?},
+  url       = {https://www.bbc.com/news/technology-37527719},
+  journal   = {BBC News},
+  publisher = {BBC},
+  author    = {Lee, Dave},
+  year      = {2016},
+  month     = {Oct}
+}
+
+# Keybase
+ @misc{rochko_2021,
+  title   = {Remove keybase integration by Gargron · pull request #17045 · Mastodon/Mastodon},
+  url     = {https://github.com/mastodon/mastodon/pull/17045},
+  journal = {GitHub},
+  author  = {Rochko, Eugene},
+  year    = {2021},
+  month   = {Nov}
+} 
+
+# JWS vs JSON-LD Proofs
+ @misc{chadwick_longley_sporny_terbu_zagidulin_zundel_2022,
+  title   = {Verifiable Credentials Implementation Guidelines 1.0},
+  url     = {https://w3c.github.io/vc-imp-guide/},
+  journal = {Verifiable credentials implementation guidelines 1.0},
+  author  = {Chadwick, David and Longley, Dave and Sporny, Manu and Terbu, Oliver and Zagidulin, Dmitri and Zundel, Brent},
+  year    = {2022},
+  month   = {Aug}
+} 
