chore: working on the conclusion

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -537,3 +537,13 @@
   year    = {2022},
   month   = {Aug}
 } 
+
+% ----------------Conclusion-------------------
+
+
+@inproceedings{inproceedings,
+  author = {G{\"o}nd{\"o}r, Sebastian and Yildiz, Hakan and Westerkamp, Martin and K{\"u}pper, Axel},
+  month  = {08},
+  title  = {Blade: A Blockchain-supported Architecture for Decentralized Services},
+  year   = {2022}
+}
