--- a/Thesis/content/00_frontpages/03_abstract.tex
+++ b/Thesis/content/00_frontpages/03_abstract.tex
@@ -1,4 +1,8 @@
 \chapter*{Abstract}
 \label{cha:abstract}
 
-In this thesis, we show that lorem ipsum dolor sit amet.
+This thesis presents a design to integrate Decentralized Identifiers (DIDs) and enable DIDComm Messaging v2 into an ActivityPub-based Online Social Network (OSN). 
+
+ActivityPub is a decentralized social network protocol that lacks security mechanisms and relies on HTTP as its communication protocol.  
+DIDs are a type of globally-unique, verifiable identifier officially standardized by the World Wide Web Consortium (W3C) in July 2022. DIDs build the foundation of Self-Sovereign Identity and give entities greater control over their online information and interactions while providing security and privacy. DIDComm Messaging v2 builds on top of DIDs, implementing various IETF standards and drafts to provide a secure, private, and decentralized communication methodology. 
+Mastodon was chosen as the representative ActivityPub implementation
