--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \label{cha:introduction}
 
-This section gives an introduction into the general field in which you are writing your thesis. It further describes the situation today, and the problems that are solved and not.
+% This section gives an introduction into the general field in which you are writing your thesis. It further describes the situation today, and the problems that are solved and not.
  
 One of the most accepted and used definitions of OSN services was given by Boyd and Ellison in, who defined a Social Network Site  as a web based service that allows individuals to
 
@@ -37,8 +37,6 @@ Web3 brings decentralization, and identities should stay behind. W3C provides us
 \section{Identifiers}
 % ---- from DID section ---
 
-Globally unique identifiers are used by individuals, organizations, abstract entities, and even internet of things devices for all kinds of different contexts. Nonetheless, the large majority of these globally unique identifiers are not under the entity's control. We rely on external authorities to issue them, allowing them to decide who or what they refer to and when they can be revoked. Their existence, validity scope and even the security mechanisms that protect them are all dependent on these external authorities. Leaving their actual owners helpless against any kind of threat or misuse\cite{sporny_longley_sabadello_reed_steele_2021}. In order to address this lack of control, the W3C DID Working Group conceptualized the Decentralized Identifiers or \emph{DIDs}.
-% ----
 
 
 Identity management, sometimes called identity and access management, is composed of all the different ways to identify, authenticate and authorize someone to access systems or services within an organization or associated organizations. 
