--- a/Thesis/content/05_evaluation.tex
+++ b/Thesis/content/05_evaluation.tex
@@ -21,7 +21,7 @@ By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was o
 \subsection{Identity Management}
 Mastodon creates accounts for users using basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} has not been implemented. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to \emph{verify} the account. Keybase offers a platform that allows prooving ownership of a social network account, like Twitter or Reddit, with the help of public key cryptography. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought it in 2020. According to Mastodon's founder, a user could still use any name in Keybase, and it was still unclear if this person was whom she said she was \cite{rochko_2020}.
 
-As mentioned in \ref{subsec:mastodon}, Mastodon uses basic password authentication to create accounts. With this, the account is restricted to this specific server. The user has no other way to register to a different server, and the identity lives as long as the instance keeps running. On the contrary, in the proposed design, the use of DIDs brings an SSI approach where the user creates his identity independently from Mastodon. In the design, the DIDs are anchored to a test network of Ethereum. Consequently, their existence and validity will persist even if the Mastodon instance ceases to exist, eliminating the \emph{single-point-of-failure} of the identity itself.  
+As mentioned in \ref{subsec:mastodon}, Mastodon uses basic password authentication to create accounts. With this, the account is restricted to this specific server. The user has no other way to register to a different server, and the identity lives as long as the instance keeps running. On the contrary, in the proposed design, the use of DIDs brings an SSI approach where the user creates his identity independently from Mastodon. In the design, the DIDs are anchored to a test network of Ethereum. Consequently, their existence and validity will persist even if the Mastodon instance ceases to exist, eliminating the \emph{single-point-of-failure} of the identity itself. On the downside, as proved in this thesis, modifying a DID document can present complications depending on the DID method. Modifications could also imply costs when not using test blockchain networks. All of this presents extra overhead for the average user, reducing the usability of such a design. 
 
 \section{Security}
 Mastodon implemented HTTP Signatures to add non-repudiation and preserve integrity against tampering to the messages sent within the federation. This approach fulfills the same goals as the JWS token used in the proposed design. Both methods follow the same idea and use public key cryptography to perform the signature. Furthermore, the same key generation algorithm is being used by both. Nonetheless, the downside of HTTP signatures is that they are limited to the HTTP protocol, whereas the JWS has no constraints. 
@@ -37,4 +37,4 @@ As explained before, the only confidentiality provided by Mastodon's implementat
 Nonetheless, the confidentiality level reached by DIDComm and the JWE standard in the proposed design has not yet achieved complete end-to-end encryption. The reason is that the Mastodon instance must have access to the private key of the DID subject in order to decrypt the payload and display the message to the user, as mentioned in the DIDComm requirements in \autoref{section:enabling_didcomm}. This imposes a significant risk because the private key is no longer under the user's control. The administrator of the Mastodon instance would have access to the plain-text private key, and some security countermeasures like key rotation would not be able to counter this. 
 
 
-
+\section{Usability}
